# ICP-Project

./: .gitignore  README.md
code/: PointCloud.m  PointCloudIterator.m  PointCloudSet.m  apply_transform.m  capture_D.m  config.m  demo.m  depthmap2pointcloud.m  do_registration.m  each.m  experiments.m  get_transformation.m  gicp.m  icp.m  im2pixels.m  imshowmulti.m  plotpointcloud.m  pointcloud.m  quad2rot.m  quat2rot.m  rigid_multiply.m  rigid_transform.m  rot2quat.m  subsample_pointcloud.m  testICP.m  test_icp.m  test_kdtree.m  test_transform.m  write_trajectory.m  writeply.m
cpp/: CMakeLists.txt  evaluation.cpp  generate_pointclouds.py  openni_grabber.cpp  register.cpp  registration.cpp  registration.h  util.cpp  util.h
matlab/: PointCloud.m  PointCloudSet.m  angular_distance.m  compound_error_at_offset.m  config.m  do_registration.m  each.m  exp_sift_vs_icp.m  experiments.m  gicp.m  mean_diff_at_offset.m  mean_error_at_offset.m  parse_eval_file.m  plot_eval.m  test_transform.m
matlab/evaluation/: mean_error_at_offset.m  mean_true_diff_at_offset.m  parse_eval_file.m  plot_eval.m  plot_parameter_tuning.m
matlab/registration/: KinectConfig.xml  PointCloud.m  capture_RGBD.m  depth2xyz.m  do_registration.m  evaluate.m  experiments.m  rigid_multiply.m  rigid_transform.m  sift_vs_icp.m  siftstep.m  test_icp.m
pcl_test/: CMakeLists.txt  cloud_viewer.cpp  openni_grabber.cpp  pcd2ply.cpp
report/: refs.bib  report.tex
rgbd_benchmark_tools/: .evaluate_ate.py.swp  .plot_trajectory_into_image.py.swp
tools/: generate_pointclouds.py  rename_frames.py
